-
Bug
-
Resolution: Fixed
-
P2
-
repo-valhalla
The VM crashes with attached TestInheritedValueTypeFields.java with:
# Internal Error (/oracle/valhalla/hotspot/src/share/vm/oops/instanceKlass.hpp:1245), pid=27947, tid=27978
# assert(has_value_fields()) failed: Sanity checking
Stack: [0x00007f6788fd3000,0x00007f67890d4000], sp=0x00007f67890d1c90, free space=1019k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x17c005c] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x18c
V [libjvm.so+0x17c0e7f] VMError::report_and_die(Thread*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
V [libjvm.so+0xb5ba62] report_vm_error(char const*, int, char const*, char const*, ...)+0x112
V [libjvm.so+0xeeb026] InstanceKlass::get_value_field_klass(int)+0x136
V [libjvm.so+0xee6ca0] InterpreterRuntime::qgetfield(JavaThread*, oopDesc*, int)+0x110
j runtime.valhalla.valuetypes.TestInheritedValueTypeFields.main([Ljava/lang/String;)V+9
v ~StubRoutines::call_stub
V [libjvm.so+0xf0f17c] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x85c
V [libjvm.so+0x15663e8] invoke(InstanceKlass*, methodHandle const&, Handle, bool, objArrayHandle, BasicType, objArrayHandle, bool, Thread*)+0xbf8
V [libjvm.so+0x156ab4b] Reflection::invoke_method(oop, Handle, objArrayHandle, Thread*)+0x1cb
V [libjvm.so+0xfdc952] JVM_InvokeMethod+0x232
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+0 java.base
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+100 java.base
j jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+6 java.base
j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+59 java.base
j com.sun.javatest.regtest.agent.MainWrapper$MainThread.run()V+172
j java.lang.Thread.run()V+11 java.base
v ~StubRoutines::call_stub
V [libjvm.so+0xf0f17c] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x85c
V [libjvm.so+0xf0bdaf] JavaCalls::call_virtual(JavaValue*, Klass*, Symbol*, Symbol*, JavaCallArguments*, Thread*)+0x43f
V [libjvm.so+0xf0c021] JavaCalls::call_virtual(JavaValue*, Handle, Klass*, Symbol*, Symbol*, Thread*)+0xb1
V [libjvm.so+0xfb1546] thread_entry(JavaThread*, Thread*)+0xb6
V [libjvm.so+0x16fba3e] JavaThread::thread_main_inner()+0x24e
V [libjvm.so+0x142f8ca] thread_native_entry(Thread*)+0xfa
C [libpthread.so.0+0x76ba] start_thread+0xca
# Internal Error (/oracle/valhalla/hotspot/src/share/vm/oops/instanceKlass.hpp:1245), pid=27947, tid=27978
# assert(has_value_fields()) failed: Sanity checking
Stack: [0x00007f6788fd3000,0x00007f67890d4000], sp=0x00007f67890d1c90, free space=1019k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x17c005c] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x18c
V [libjvm.so+0x17c0e7f] VMError::report_and_die(Thread*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
V [libjvm.so+0xb5ba62] report_vm_error(char const*, int, char const*, char const*, ...)+0x112
V [libjvm.so+0xeeb026] InstanceKlass::get_value_field_klass(int)+0x136
V [libjvm.so+0xee6ca0] InterpreterRuntime::qgetfield(JavaThread*, oopDesc*, int)+0x110
j runtime.valhalla.valuetypes.TestInheritedValueTypeFields.main([Ljava/lang/String;)V+9
v ~StubRoutines::call_stub
V [libjvm.so+0xf0f17c] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x85c
V [libjvm.so+0x15663e8] invoke(InstanceKlass*, methodHandle const&, Handle, bool, objArrayHandle, BasicType, objArrayHandle, bool, Thread*)+0xbf8
V [libjvm.so+0x156ab4b] Reflection::invoke_method(oop, Handle, objArrayHandle, Thread*)+0x1cb
V [libjvm.so+0xfdc952] JVM_InvokeMethod+0x232
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+0 java.base
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+100 java.base
j jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+6 java.base
j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+59 java.base
j com.sun.javatest.regtest.agent.MainWrapper$MainThread.run()V+172
j java.lang.Thread.run()V+11 java.base
v ~StubRoutines::call_stub
V [libjvm.so+0xf0f17c] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x85c
V [libjvm.so+0xf0bdaf] JavaCalls::call_virtual(JavaValue*, Klass*, Symbol*, Symbol*, JavaCallArguments*, Thread*)+0x43f
V [libjvm.so+0xf0c021] JavaCalls::call_virtual(JavaValue*, Handle, Klass*, Symbol*, Symbol*, Thread*)+0xb1
V [libjvm.so+0xfb1546] thread_entry(JavaThread*, Thread*)+0xb6
V [libjvm.so+0x16fba3e] JavaThread::thread_main_inner()+0x24e
V [libjvm.so+0x142f8ca] thread_native_entry(Thread*)+0xfa
C [libpthread.so.0+0x76ba] start_thread+0xca
- blocks
-
JDK-8188807 [MVT] Split ValueTypeTestBench into multiple tests and adjust timeout
-
- Resolved
-