8187817: [MVT] Crash with "assert(has_value_fields()) failed: Sanity checking" when inheriting value type fields

Reviewed-by: dsimms